# terrain-editor

./: .gitignore  README.md  projectinfo.xml
code/: CMakeLists.txt  stdneb.cc
code/consoletest/: CMakeLists.txt  consoletest.cc  consoletestapp.cc  consoletestapp.h
code/demoproject/: CMakeLists.txt  demogameapplication.cc  demogameapplication.h  demoproject.cc
code/demoproject/gamestates/: demogamestate.cc  demogamestate.h
code/networkdemoproject/: CMakeLists.txt  netdemogameapplication.cc  netdemogameapplication.h  netdemoproject.cc
code/networkdemoproject/gamestates/: netdemogamestate.cc  netdemogamestate.h
code/terrain/: CMakeLists.txt  terrainentity.cc  terrainentity.h  terrainnode.cc  terrainnode.h  terrainnodeinstance.cc  terrainnodeinstance.h
code/terrainaddon/: CMakeLists.txt  brush.cc  brush.h  brushattributes.cc  brushattributes.h  brushfunc.cc  brushfunc.h  brushfuncsmooth.cc  brushfuncsmooth.h  brushsmooth.cc  brushsmooth.h  brushtexture.cc  brushtexture.h  brushtool.cc  brushtool.h  terrainaddon.cc  terrainaddon.h  terrainplugin.cc  terrainplugin.h
code/terraineditor/: CMakeLists.txt  terrainviewer.cc  terrainviewerapplication.cc  terrainviewerapplication.h
code/terrainqtaddon/: CMakeLists.txt
code/terrainqtaddon/code/: terrainaddoncontroller.cc  terrainaddoncontroller.h
code/terrainqtaddon/ui/: terrainaddonwindow.ui
code/testviewer/: CMakeLists.txt  testviewer.cc  testviewerapplication.cc  testviewerapplication.h
data/gui/demo/: demo.lua  demo.rml
data/scripts/: follower.lua
data/scripts/demoproject/: player.lua  traptrigger.lua  trigger2.lua  trigger3.lua  triggerscript.lua
data/tables/: blueprints.xml  globals.xml
data/tables/db/: AnimEventEffects.xml  _audiobanks.xml  _ui_fonts.xml  _ui_layouts.xml  _ui_scripts.xml  animatedphysics.xml  animeventcamshake.xml  clickplayer.xml  follow.xml  player.xml  simple.xml  simplescripted.xml
data/tables/posteffect/: Default.xml  blue.xml  lila.xml
work/assets/characters/: face.attributes  face.constants  face.fbx  face.sur
work/assets/demo_full/: _irradiance.dds
work/assets/examples/: ak74.attributes  ak74.constants  ak74.fbx  ak74.sur  ak74_n3.thumb  ak74_sur.thumb  box.constants  box.fbx  box.sur  box_sur.thumb  cards.psd  dummy_cubemap.dds  dummyground.attributes  dummyground.constants  dummyground.fbx  dummyground.physics  heighMap.xml  mariusz.sur  mariusz_sur.thumb  plane.attributes  plane.constants  rifle.attributes  rifle.constants  rifle.fbx  skydome.attributes  skydome.constants  skydome.fbx  skydome.sur  tiger.attributes  tiger.constants  tiger.fbx  tiger.sur  tiger_sur.thumb  volumefog.psd  volumefog_bump.psd  wasser_bump.psd  water.attributes  water_border.psd  water_center.psd
work/assets/level/: Artefact.attributes  Artefact.constants  Artefact.fbx  Artefact.sur  Artefact_n3.thumb  Artefact_sur.thumb  DeathObject.attributes  DeathObject.constants  DeathObject.fbx  DeathObject.physics  DeathObject.sur  DeathObject_n3.thumb  Door.attributes  Door.constants  Door.fbx  Door.physics  Door_n3.thumb  distantLand.attributes  envvironmentLevel.attributes  envvironmentLevel.constants  envvironmentLevel.fbx  envvironmentLevel.physics  envvironmentLevel.sur  envvironmentLevel_n3.thumb  envvironmentLevel_sur.thumb  levelground.attributes  levelground.constants  levelground.fbx  levelground.sur  levelwalls.attributes  levelwalls.constants  levelwalls.fbx  levelwalls.sur  oceanPlane.attributes  oceanPlane.constants  oceanPlane.fbx  oceanPlane.sur  pad1.attributes  pad1.constants  pad1.fbx  (+15 more)
work/assets/materials/: mariusz2_sur.thumb
work/assets/placeholder/: dummyCharacter.attributes  dummyCharacter.constants  dummyCharacter.fbx  dummyCharacter.sur  dummyCharacter_n3.thumb
work/assets/props/: bridge.attributes  bridge.constants  bridge.fbx  bridge.sur  bridgeStart.attributes  bridgeStart.constants  bridgeStart.fbx  bridge_sur.thumb  bush_big.attributes  bush_big.constants  bush_big.fbx  bush_big.sur  bush_medium.attributes  bush_medium.constants  bush_medium.fbx  bush_medium.sur  bush_tiny.attributes  bush_tiny.constants  bush_tiny.fbx  bush_tiny.sur  cliff_01.attributes  cliff_01.constants  cliff_01.fbx  cliff_01.sur  cliff_beach_smooth.attributes  cliff_beach_smooth.constants  cliff_beach_smooth.fbx  cliff_beach_smooth.sur  doorway_geo.attributes  doorway_geo.constants  doorway_geo.fbx  doorway_geo.sur  field_wheat.attributes  field_wheat.constants  field_wheat.fbx  field_wheat.sur  grass.attributes  grass.constants  grass.fbx  grass.sur  (+119 more)
work/assets/terrainmesh/: plane.attributes  plane.constants
work/audio/demo/: demo.fspro  demo.mixer  demo.snapshotList  demo.tags
work/audio/demo/.cache/: preloadCache.cache.3-shm  preloadCache.cache.3-wal
work/audio/demo/.cache/fsbcache/Desktop/: splosion {a5bedb87-765a-4153-a6b8-1d841b7eecd4}_AF772A52A3FA5BDD.fobj
work/audio/demo/Audio Bin/: Master {565f677d-cdb1-4b9f-a76f-d55e03d5e542}.binfolder  splosion {47562ab9-f44a-484d-99dd-4b06115b553c}.audiofile
work/audio/demo/Banks/: Master Bank {1957587c-2eae-4f33-ae68-f57b13c4f5e8}.bank  Master {c34750ed-5a82-4c8a-a885-282fb73f057a}.folder  Misc {e19e0b48-d164-4346-88eb-f5f7fcbc525b}.bank
work/audio/demo/Events/: splosion {b2c3b8f3-9188-496b-896f-b93b0299562f}.event
work/audio/demo/Folders/: Master {afe58703-87cf-46df-843a-72616d934200}.folder
work/audio/demo/Mixing Desk/: Master Bus {3b235d3d-1638-49ea-a185-ab50166f36bd}.group  Reverb {ab49ddf0-0842-45d5-954c-e82378b0c345}.return  splosion {dec27a13-d211-4791-968d-cf14612aed8f}.input
work/audio/demo/Profiler/: Profiler Sessions {7895690a-74ae-4de4-ab29-3526c92c1d4e}.sfolder
work/levels/: demo_full.xml  empty.xml  mainLevel.xml  nav.xml  net.xml
work/materials/: my_base.xml
work/shaders/gl/: my_simple.fx
